--- a/package.json
+++ b/package.json
@@ -41,10 +41,7 @@
   },
   "dependencies": {
     "@openworklabs/filecoin-address": "^0.0.4",
-    "arraybuffer-to-string": "^1.0.2",
     "blakejs": "^1.1.0",
-    "crypto-js": "^4.0.0",
-    "elliptic": "^6.5.2",
-    "string-to-arraybuffer": "^1.0.2"
+    "elliptic": "^6.5.2"
   }
 }
